--- a/src/intro.css
+++ b/src/intro.css
@@ -2,18 +2,17 @@
   background-color: white;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
 
 .main {
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   max-width: 1600px;
   margin: 50px auto;
   align-items: center;
-  padding: 50px;
+  padding: 0px;
   padding-top: 0px;
   cursor: default;
 }
@@ -28,9 +27,11 @@ p {
   padding: 50px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   justify-content: left;
+  flex-wrap: wrap;
+  max-width: 1600px;
+  gap: 5rem;
 }
 
 .left-text {
